# PIPELINE-API-DADOS

./: README.md  main.py  pyproject.toml
data/: campeonatos_ingleses.parquet
src/: extract.py  load.py  transform.py
